Attempt to fix hero section resizing on mobile when scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,8 @@ nav>button {
 
 /* HERO SECTION */
 .hero {
-    min-height: calc(90dvh - 120px);
+    min-height: calc(90dvh);
+    height: -webkit-fill-available;
     width: 100%;
     background: url('../images/nebula-background-wavy.jpg') no-repeat center center;
     background-size: cover;
